--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site was created by Pavan Bhamidipati and the data is fetched from Darksky and Mapbox.com</p>
         <img class="portrait" src="/img/pavan.jpg">
     </div>
     
